# TwoEars

./: .gitignore  README.md  TwoEars.xml  TwoEarsPaths.xml  startTwoEars.m
AuditoryFrontEnd/: AuditoryFrontEnd.xml  manager.m  requestList.m  startAuditoryFrontEnd.m
AuditoryFrontEnd/Parameter_handling/: Parameters.m
AuditoryFrontEnd/Processors/: Processor.m  downSamplerProc.m  drnlProc.m  gaborProc.m  icProc.m  modulationProc.m  offsetMapProc.m  onsetMapProc.m  pitchProc.m  preProc.m
AuditoryFrontEnd/Signals/: ModulationSignal.m  Signal.m  TimeDomainSignal.m  TimeFrequencySignal.m  circVBufArrayInterface.m
AuditoryFrontEnd/Tools/: createFB_Mod.m  detectOnsetsOffsets.m  findpeaks_VB.m  listFiles.m
AuditoryFrontEnd/src/: manager.m
AuditoryFrontEnd/test/: DEMO_AMS.m  DEMO_Adaptation.m  DEMO_Autocorrelation.m  DEMO_ChunkBased.m  DEMO_Crosscorrelation.m  DEMO_DRNL.m  DEMO_DUET.m  DEMO_Feedback.m  DEMO_GaborFeatures.m  DEMO_Gammatone.m  DEMO_Gammatone_Reconstruction.m  DEMO_IC.m  DEMO_IHC.m  DEMO_ILD.m  DEMO_ITD.m  DEMO_MOC.m  DEMO_ObjectOriented.m  DEMO_OffsetStrength.m  DEMO_OnsetOffsetMaps.m  DEMO_OnsetStrength.m  DEMO_Pitch.m  DEMO_PreProcessing.m  DEMO_Precedence.m  DEMO_RAA.m  DEMO_Ratemap.m  DEMO_STFT.m  DEMO_SpectralFeatures.m  DEMO_feedback.m  README.md
AuditoryMachineLearningTrainingTestingPipeline/: AMLTTP.xml  IdentificationTraining.xml  LICENSE  startAMLTTP.m  startIdentificationTraining.m
AuditoryMachineLearningTrainingTestingPipeline/src/: TwoEarsIdTrainPipe.m  classDiagram.plantuml.txt
BinauralSimulator/: BinauralSimulator.xml  startBinauralSimulator.m
BinauralSimulator/+simulator/: AudioSink.m  Object.m  RobotInterface.m  SimulatorConvexRoom.m  SimulatorInterface.m
BinauralSimulator/+xml/: PropertyDescription.m  dbGetFile.m  dbOpenXML.m  tef.xsd  tef.xsl
BinauralSimulator/examples/: brirs.m  moving_source.m  room.m  two_sources.m
BinauralSimulator/mex/: ssr_aap.mexw64  ssr_binaural.mexmaci64  ssr_brs.mexw64  ssr_generic.mexw64  ssr_nfc_hoa.mexa64  ssr_nfc_hoa.mexmaci64  ssr_nfc_hoa.mexw64  ssr_vbap.mexmaci64  ssr_vbap.mexw64  ssr_wfs.mexmaci64
BinauralSimulator/sofa/: SOFAstart.m
BinauralSimulator/src/: startBinauralSimulator.m
BlackboardSystem/: BlackboardSystem.xml  startBlackboardSystem.m
BlackboardSystem/blackboard_core/: Blackboard.m  BlackboardEventData.m  BlackboardMonitor.m  BlackboardSystem.m  Hypothesis.m  KSInstantiation.m  Scheduler.m
BlackboardSystem/blackboard_data/: IdentityHypothesis.m  PerceivedLocation.m
BlackboardSystem/evaluation/: displayLocalisationResults.m  evaluateLocalisationResults.m
BlackboardSystem/gmtk_matlab_interface/: gmtkEngine.m  makeUnixPath.m  readhtk.m
BlackboardSystem/identificationTraining/: AuditoryFEmodule.m  BAC2.m  BGmmModel.m  BGmmTrainer.m  BMFAModel.m  BgmmPredict.m  BinSimProcInterface.m  BlockConcatFeatureSet2.m  BmfaPredict.m  DataScalingModel.m  FeatureSet1BlockmeanLmVsStd.m  FeatureSet1BlockmeanLowVsHighFreqRes.m  FeatureSet2Blockmean.m  GatherFeaturesProc.m  GlmNetLambdaSelectTrainer.m  GmmNetModel.m  IdProcInterface.m  MFAModel.m  MbfNetModel.m  MultiConfigurationsAFEmodule.m  MultiConfigurationsFeatureProc.m  SVMmodel.m  SVMmodelSelectTrainer.m  TwoEarsNIstandardIdPipeline.m  descriptiveStructCells.m  featureSelection.m  featureSelectionPCA.m  gmmPredict.m  identTraining_repos.xml  likelihood.m  logsumexp.m  makeResultsTable.m  makeTestScene.m  stringifyCell.m  trainBMFA.m  trainMbfs.m  vMFModel.m  vMFPredict.m
BlackboardSystem/knowledge_sources/: AuditoryFrontEndDepKS.m  AuditoryFrontEndKS.m  ConfusionKS.m  ConfusionSolvingKS.m  IdDecisionKS.m  RotationKS.m
Examples/localisation_look_at_details/: localise.m
Examples/localisation_w_and_wo_head_movements/: Blackboard.xml  Config.xml  localise.m  (+1 more)
IdentificationTraining/: IdentificationTraining.xml  startIdentificationTraining.m
RoboticPlatform/bass-genom3/codels/: AudioCapture.c  AudioCapture.h  Makefile.am  Ports.c  Ports.h  Sockets.c  Sockets.h  bass_capture_codels.c  bass_codels.c  bass_socket_codels.c
RoboticPlatform/openAFE/: Makefile.am  Makefile.in  README.md  configure  configure.ac
RoboticPlatform/openAFE/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
RoboticPlatform/openAFE/examples/: DEMO_crossCorrelation.cpp  DEMO_filterbank.cpp  DEMO_ihc.cpp  DEMO_ild.cpp  DEMO_input.cpp  DEMO_preProc.cpp  DEMO_ratemap.cpp  Makefile.am  Makefile.in  README.md  matFiles.cpp  matFiles.hpp
RoboticPlatform/openAFE/examples/Test_signals/: DEMO_Speech_Anechoic.mat
RoboticPlatform/openAFE/src/: Makefile.am  Makefile.in
RoboticPlatform/openAFE/src/Filters/: CascadeFilters.hpp  GammatoneFilter.cpp  GammatoneFilter.hpp  GenericFilter.hpp  Makefile.am  Makefile.in  bwCoef.cpp  bwCoef.hpp  bwFilter.cpp  bwFilter.hpp  bwIIR.cpp  bwIIR.hpp  leakyIntegratorFilter.cpp  leakyIntegratorFilter.hpp
RoboticPlatform/openAFE/src/Processors/: LAGProcessor.hpp  Makefile.am  Makefile.in  Processor.cpp  Processor.hpp  ProcessorVector.hpp  TDSProcessor.hpp  TFSProcessor.hpp  crossCorrelation.cpp  crossCorrelation.hpp  gammatoneProc.cpp  gammatoneProc.hpp  ihcProc.cpp  ihcProc.hpp  ildProc.cpp  ildProc.hpp  inputProc.cpp  inputProc.hpp  preProc.cpp  preProc.hpp  ratemap.cpp  ratemap.hpp  windowBasedLAGProcs.cpp  windowBasedLAGProcs.hpp  windowBasedProcs.cpp  windowBasedProcs.hpp
RoboticPlatform/openAFE/src/Signals/: CorrelationSignal.hpp  Makefile.am  Makefile.in  Signal.cpp  Signal.hpp  TimeDomainSignal.hpp  TimeFrequencySignal.hpp  circularContainer.hpp  dataType.hpp
RoboticPlatform/openAFE/src/tools/: Makefile.am  Makefile.in  mathTools.hpp  window.cpp  window.hpp
RoboticPlatform/rosAFE/codels/: Makefile.am  Makefile.in  Ports.cpp  Ports.hpp  genom3_dataFiles.hpp  processorCommon.cpp  processorCommon.hpp  rosAFE_codels.cc  rosAFE_crossCorrelationProc_codels.cc  rosAFE_gammatoneProc_codels.cc  rosAFE_ihcProc_codels.cc  rosAFE_ildProc_codels.cc  rosAFE_init_codels.cc  rosAFE_input_codels.cc  rosAFE_preProc_codels.cc  rosAFE_ratemapProc_codels.cc  stateMachine.cpp  stateMachine.hpp
Tools/: Tools.xml  startTools.m
(+1029 files in other folders)
