noinst_LIBRARIES = libfilters.a

libfilters_a_SOURCES = GenericFilter.hpp
libfilters_a_SOURCES += CascadeFilters.hpp
libfilters_a_SOURCES += bwIIR.hpp
libfilters_a_SOURCES += bwIIR.cpp
libfilters_a_SOURCES += bwCoef.hpp
libfilters_a_SOURCES += bwCoef.cpp
libfilters_a_SOURCES += bwFilter.hpp
libfilters_a_SOURCES += bwFilter.cpp
libfilters_a_SOURCES += GammatoneFilter.hpp
libfilters_a_SOURCES += GammatoneFilter.cpp
libfilters_a_SOURCES += leakyIntegratorFilter.hpp
libfilters_a_SOURCES += leakyIntegratorFilter.cpp

