noinst_LIBRARIES = libsignals.a

libsignals_a_SOURCES = dataType.hpp
libsignals_a_SOURCES += circularContainer.hpp
libsignals_a_SOURCES += Signal.hpp Signal.cpp
libsignals_a_SOURCES += TimeDomainSignal.hpp
libsignals_a_SOURCES += TimeFrequencySignal.hpp
libsignals_a_SOURCES += CorrelationSignal.hpp
